<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/amount_value"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCreditCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAmountLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits=" 1234567890"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCreditCardExpiryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/inputLayoutCreditCardCVV"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutCreditCardNumber" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCreditCardExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutCreditCardCVV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/inputLayoutCreditCardExpiryDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutCreditCardNumber" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCreditCardCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierViewNoReasonCVVHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="inputLayoutCreditCardExpiryDate, inputLayoutCreditCardCVV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewNoReasonCVVLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierViewNoReasonCVVHelper"
        android:text="@string/no_reason_cvv_label"/>

    <RadioGroup
        android:id="@+id/radioGroupNoReasonCVV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNoReasonCVVLabel">

        <RadioButton android:id="@+id/radioButtonNoCVVOnCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reason_cvv_option_no_cvv_on_card" />

        <RadioButton android:id="@+id/radioButtonNoCardPresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reason_cvv_option_no_card_present" />

        <RadioButton android:id="@+id/radioButtonUnableToRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reason_cvv_option_unable_read" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMenuMotoTypeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerMenuMotoType"
        app:layout_constraintTop_toBottomOf="@id/radioGroupNoReasonCVV"
        app:layout_constraintBaseline_toBaselineOf="@id/spinnerMenuMotoType"
        android:text="@string/moto_type_label"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerMenuMotoType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/textViewMenuMotoTypeLabel"
        app:layout_constraintTop_toBottomOf="@id/radioGroupNoReasonCVV"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/select_moto_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCardStoredLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerMenuMotoType"
        android:text="@string/store_card_label"/>

    <RadioGroup
        android:id="@+id/radioGroupCardStoredOnFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCardStoredLabel">

        <RadioButton android:id="@+id/radioButtonCardStoredYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/card_stored_option_yes" />

        <RadioButton android:id="@+id/radioButtonCardStoredNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_stored_option_no" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:enabled="false"
        android:text="@string/button_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>